<resources>
    <string name="app_name">Serum of Truth</string>
    <string name="slogan_image">Slogan Image</string>
    <string name="serum_of_truth_database">SERUM OF TRUTH DATABASE</string>
    <string name="icon_sot_search">Icon SoT search</string>
    <string name="all_languages">All languages</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="title">Title</string>
    <string name="url">Url: </string>
    <!--    Shared Preferences-->
    <string name="sp_user_id">sp_user_id</string>
    <string name="sp_user_email">sp_user_email</string>
    <string name="sp_access_token">sp_access_token</string>
    <string name="sp_expired_time">sp_expired_time</string>
    <string name="sp_login_state">sp_login_state</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sot_search">SoT SEARCH</string>
    <string name="sot_select">SoT SELECT</string>
    <string name="back_to_my_page">BACK TO MY PAGE</string>
    <string name="no_related_news_found">No related news found!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_up">Sign up</string>
    <string name="i_can_t_remember_my_password">I can\'t remember my password</string>
    <string name="x">[ X ]</string>
    <string name="english">English</string>
</resources>