<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/DarkGrey"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="250dp"
        android:text="@string/email"
        android:textColor="@color/DarkGrey"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@id/tv_email"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginVertical="@dimen/dp_5"
        android:background="@drawable/grey_borderd_rectangle"
        android:hint="@string/email"
        android:paddingHorizontal="@dimen/dp_10" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/password"
        android:textColor="@color/DarkGrey"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@id/tv_password"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginVertical="@dimen/dp_5"
        android:background="@drawable/grey_borderd_rectangle"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/dp_10" />

    <TextView
        android:id="@+id/tv_login"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/DarkGrey"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/log_in"
        android:textColor="@drawable/selector_button_login"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_not_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/not_a_member" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_toEndOf="@id/tv_not_member"
        android:text="@string/sign_up"
        android:textColor="@color/DodgerBlue" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_not_member"
        android:layout_marginTop="7dp"
        android:layout_marginStart="@dimen/dp_30"
        android:text="@string/i_can_t_remember_my_password"
        android:textColor="@color/DodgerBlue" />
</RelativeLayout>