<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".view.PopUpActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginVertical="@dimen/dp_20"
        android:adjustViewBounds="true"
        android:contentDescription="@string/slogan_image"
        android:src="@drawable/img_sot_slogan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_weight="1"
            android:background="@drawable/yellow_thick_border_rectangle"
            android:gravity="center"
            android:paddingVertical="0dp"
            android:text="@string/sot_search"
            android:textColor="@color/Black" />

        <TextView
            android:id="@+id/tv_select"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_weight="1"
            android:background="@drawable/white_thick_border_rectangle"
            android:gravity="center"
            android:paddingVertical="0dp"
            android:text="@string/sot_select"
            android:textColor="@color/Black" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15">

    </androidx.viewpager.widget.ViewPager>


</LinearLayout>