<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_thumbnail"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:contentDescription="@string/thumbnail" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/title"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/title"
                android:textSize="@dimen/sp_15"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/url"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_15"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginStart="@dimen/dp_5"
                    android:id="@+id/tv_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/title"
                    android:textColor="@color/CornflowerBlue"
                    android:textSize="@dimen/sp_15"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:layout_marginVertical="@dimen/dp_5"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:background="@color/LightSlateGray"/>

</LinearLayout>